cleans up Honors list on about page

--- a/about.html
+++ b/about.html
@@ -29,17 +29,12 @@ last-updated: February 5, 2023
           <div class="col-md-12">
             <h2 class="section-heading">Honors</h2>
             <ul class="fa-ul">
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022	Gold in “Institutional Directory”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Ohio University Building Directory</li>
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022	Gold in “Development Website”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, OHIO Give website and fund exploration tool
-                </li>
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-medal"></i></span>2022	Silver in “Institutional Website”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Ohio University Homepage
-                </li>
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award"></i></span>2022	Merit in “Microsite”, <a href="https://educationdigitalmarketingawards.com/edma-winners-list-2022/">Education Digital Marketing Awards</a>, Experience OHIO website, exploration tool, and homepage integration
-                </li>
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award-simple"></i></span>2019	Honorable Mention in “Website”, <a href="https://ucda.canto.com/v/UCDADesignAwards2019/landing">University & College Designers Association</a>, Belcher Memorial Website
-                </li>
-              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy-star"></i></span>2018	Grand Award in “Diversity Programs”, <a href="https://www.case.org/awards/2018/2018-district-iii-award-winners">Council for Advancement and Support of Education - District III</a>, Diversity Dialogues Website
-                </li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022 -	Gold in “Institutional Directory”, Education Digital Marketing Awards<!--link:https://educationdigitalmarketingawards.com/edma-winners-list-2022/ -->, Ohio University Building Directory</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2022 - Gold in “Development Website”, Education Digital Marketing Awards<!--link:https://educationdigitalmarketingawards.com/edma-winners-list-2022/ -->, OHIO Give website and fund exploration tool</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-medal"></i></span>2022 - Silver in “Institutional Website”, Education Digital Marketing Awards<!--link:https://educationdigitalmarketingawards.com/edma-winners-list-2022/ -->, Ohio University Homepage</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award"></i></span>2022 - Merit in “Microsite”, Education Digital Marketing Awards<!--link:https://educationdigitalmarketingawards.com/edma-winners-list-2022/ -->, Experience OHIO website, exploration tool, and homepage integration</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-award"></i></span>2019 - Honorable Mention in “Website”, University &amp; College Designers Association<!--link:https://ucda.canto.com/v/UCDADesignAwards2019/landing -->, Belcher Memorial Website</li>
+              <li class="mb-3"><span class="fa-li"><i class="fa-solid fa-trophy"></i></span>2018 - Grand Award in “Diversity Programs”, Council for Advancement and Support of Education - District III<!--link:https://www.case.org/awards/2018/2018-district-iii-award-winners -->, Diversity Dialogues Website</li>
           </ul>
           </div>
         </div>
