--- a/about.html
+++ b/about.html
@@ -10,13 +10,12 @@ last-updated: February 5, 2023
   <div class="row">
     <div class="col-md-10 mx-auto">
       <img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 33%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
-      <p>I am a graphic and web designer and front-end developer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
+      <p>I am a web designer, front-end developer, and graphic designer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
       <p>I enjoy the complex artistry of design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
 
       <p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="inquire.html">Inquire if you'd like to discuss your project</a>.</p>
 
-      <p>I like good paper, home DIY projects, and strawberry cheesecake.
-      (And I don't think that fruit should be on pizza.)</p>
+      <p>I like good paper, home DIY projects, and strawberry cheesecake. (And I don't think that fruit should be on pizza.)</p>
     </div>
   </div>
 </div>
@@ -155,8 +154,9 @@ last-updated: February 5, 2023
             <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
             <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
             <li>Supports the Oxford Comma</li>
-            <li>Is a budding home canner</li>
-            <li>Makes handmade soap</li>
+            <li>Budding home canner</li>
+            <li>Handmade soap maker</li>
+            <li>Home DIY project devotee</li>
             <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
           </ul>
         </div>
