fixes row is parent on experience directory

--- a/_projects/ou-experience-directory.html
+++ b/_projects/ou-experience-directory.html
@@ -10,7 +10,7 @@ front-image-alt: "interior experience page thumbnail"
 published: true
 ---
 
-<div class="row">
+<div class="row is-parent">
     <div class="col-lg-8 offset-lg-2 col-xl-6 offset-xl-3">
         <p>This website project aims to showcase unique learning opportunities available to Ohio University students. I worked to design and develop two new web page layouts - one interior page that displays data for each individual experience and one landing page with search and filtering capabilities - and a 'featured experience' layout to display on the university website homepage.</p>
     </div>
