fixes row ordering, reorders personal facts

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ last-updated: February 5, 2023
   </div>
 </div>
 
-<div class="row bg-tertiary">
+<div class="bg-tertiary">
   <div class="container">
     <div class="row">
       <div class="col-md-10 mx-auto">
@@ -42,7 +42,7 @@ last-updated: February 5, 2023
   </div>
 </div>
 
-<div class="row bg-floralwhite">
+<div class="bg-floralwhite">
   <div class="container">
     <div class="row">
       <div class="col-md-10 mx-auto">
@@ -152,12 +152,12 @@ last-updated: February 5, 2023
           <h2 class="section-heading">Personal Facts</h2>
           <ul class="mb-5">
             <li><a href="https://baconipsum.com/" target="_blank">Fan of Bacon Ipsum</a></li>
-            <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
             <li>Supports the Oxford Comma</li>
+            <li><a href="http://howtoreallypronouncegif.com/" target="_blank">Pronounces it gif, not jif</a></li>
             <li>Budding home canner</li>
             <li>Handmade soap maker</li>
-            <li>Home DIY project devotee</li>
             <li><a href="https://www.youtube.com/watch?v=XMZIAlKFRY4" target="_blank">Allergic to gluten</a></li>
+            <li>Home DIY project devotee</li>
           </ul>
         </div>
         <div class="col-md-6 text-center">
