hides framework document, fixes row is parent

--- a/_projects/ou-framework-document.html
+++ b/_projects/ou-framework-document.html
@@ -6,10 +6,10 @@ project-date: 2019-09-09
 work-type: Print Design
 front-image: /img/portfolio/strategic-framework-front.jpg
 front-image-alt: "a book is open to two pages with text, green boxes, and photos"
-published: true
+published: false
 ---
 
-<div class="row">
+<div class="row is-parent">
     <div class="col-lg-8 offset-lg-2 mb-4">
         <img class="img-fluid" src="../../img/portfolio/strategic-framework-internal1.jpg" alt="page design showing a full experience layout" />
     </div>
