hides wedding invitation project

--- a/_projects/wedding-invitation.html
+++ b/_projects/wedding-invitation.html
@@ -6,10 +6,10 @@ project-date: 2017-07-15
 work-type: Print Design
 front-image: /img/portfolio/wedding-invitation-front.jpg
 front-image-alt: "detail photograph of a wedding invitation decorated with flowers and feathers"
-published: true
+published: false
 ---
 
-<div class="row">
+<div class="row is-parent">
     <div class="col-lg-8 offset-lg-2">
         <img class="img-fluid" src="../../img/portfolio/wedding-invitation-internal.jpg" alt="page design showing a full experience layout" />
     <p>The chosen color palette for the wedding was plum and greenery. The couple included the reading of <a href="https://www.biblegateway.com/passage/?search=Matthew%206%3A25-34&version=NIV" target="_blank">Matthew 6:25-34</a> in the ceremony and wanted feathers featured in the invitation to align with this theme.</p>
