hides haiti made project

--- a/_projects/haiti-made-catalog.html
+++ b/_projects/haiti-made-catalog.html
@@ -6,7 +6,7 @@ project-date: 2015-02-15
 work-type: Print Design
 front-image: /img/portfolio/haiti-made-front.jpg
 front-image-alt: "cover of a printed catalog of handmade products"
-published: true
+published: false
 ---
 
 <div class="row">
