edits about page
adds featured projects link button and reorders skill list items

--- a/about.html
+++ b/about.html
@@ -3,19 +3,20 @@ layout: page
 title: About Me
 description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-about.jpg'
-last-updated: February 5, 2023
+last-updated: March 12, 2023
 ---
 
 <div class="container">
-  <div class="row">
+  <div class="row mb-4">
     <div class="col-md-10 mx-auto">
       <img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 33%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
       <p>I am a web designer, front-end developer, and graphic designer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
       <p>I enjoy the complex artistry of design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
-
       <p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="inquire.html">Inquire if you'd like to discuss your project</a>.</p>
-
       <p>I like good paper, home DIY projects, and strawberry cheesecake. (And I don't think that fruit should be on pizza.)</p>
+    </div>
+    <div class="col-md-10 mx-auto text-center">
+      <a class="btn btn-primary" href="{{"/projects" | relative_url }}">View My Featured Projects</a>
     </div>
   </div>
 </div>
@@ -53,9 +54,9 @@ last-updated: February 5, 2023
           <div class="col-md-6">
             <h3>Web Strategy</h3>
             <ul>
+              <li>Web Project Management</li>
               <li>User Experience</li>
               <li>Information Architecture</li>
-              <li>Web Project Management</li>
               <li>Web Migration</li>
               <li>Enterprise-wide Websites</li>
               <li>Centralized Site Management</li>
@@ -75,9 +76,7 @@ last-updated: February 5, 2023
               <li>Javascript Implementation</li>
               <li>Twig</li>
               <li>Git</li>
-              <li>HTML Email Development</li>
-              <li>Email Marketing Systems</li>
-              <li>XML</li>
+              <li>HTML Email Development &amp; Email Marketing Systems</li>
             </ul>
           </div>
           <div class="col-md-6">
