--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ background: '/img/bg-index.jpg'
         <p></p>
         <p>I create strategic, user-focused websites and brands that help you communicate with the right customers so you can focus on delivering your passion.</p> 
       </div>
-      <div class="col-md-6 px-5 px-sm-3  text-center">
-        <h2>Highly qualified.</h2>
-        <p>Years of success, honors, skills, and experience.<br>Learn more about me:</p>
-        <a class="btn btn-primary" href="{{"/about" | relative_url }}">About</a>
-      </div>
       <div class="col-md-6 px-5 px-sm-3 mt-4 mt-md-0 text-center">
         <h2>You work hard.</h2>
         <p>Your brand should work just as hard.<br>Learn how I can help:</p>
         <a class="btn btn-primary" href="{{"/work-with-me" | relative_url }}">Work with Me</a>
+      </div>
+      <div class="col-md-6 px-5 px-sm-3  text-center">
+        <h2>I work hard, too.</h2>
+        <p>I have years of success, honors, skills, and experience.<br>Learn more about me:</p>
+        <a class="btn btn-primary" href="{{"/about" | relative_url }}">About Me</a>
       </div>      
       </div>
     </div>
