edits work with me list items
removes periods for list consistency

--- a/work-with-me.html
+++ b/work-with-me.html
@@ -4,7 +4,7 @@ title: Have a brand the competition is jealous of
 subtitle: "Nature-Inspired Branding and Web Design"
 description: Tell your unique story and attract the right customers with your branding
 background: '/img/bg-work-with-me.jpg'
-last-updated: February 6, 2023
+last-updated: March 12, 2023
 published: true
 ---
 
@@ -171,10 +171,10 @@ published: true
       <p>When you work with me, you should expect questions like “What are your key differentiators?” and “What are the primary goals of your target audience?” not “What colors do want your buttons to be?”</p>
       <p>I’m not a good fit for you if:</p>
       <ul class="failure-list">
-          <li>You are looking for someone to just “make it pretty.”</li>
-          <li>You don’t like someone asking questions and you want them the to blindly follow instructions.</li>
-          <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers.</li>
-          <li>You're attached to your old ways of doing things because "This is the way we've always done it," a.k.a.- its easy and comfortable.</li>
+          <li>You are looking for someone to just “make it pretty”</li>
+          <li>You don’t like someone asking questions and you want them the to blindly follow instructions</li>
+          <li>You aren’t open to someone pushing back on ideas in order to advocate for your end users and customers</li>
+          <li>You're attached to your old ways of doing things because "This is the way we've always done it," a.k.a.- its easy and comfortable</li>
       </ul>
       </div>
       <div class="col-md-12 text-center">
