updates wcu homepage project
adds problem statement and project goals

--- a/_projects/wcu-homepage.html
+++ b/_projects/wcu-homepage.html
@@ -3,14 +3,14 @@ layout: portfolio-item
 title: Western Carolina University Website Homepage
 subtitle: Redesign and development of the website homepage for a mid-sized, regional university in North Carolina.
 project-date: 2019-09-24
-work-type: Web Design and Development
+work-type: Web Design, Prototyping, and Development
 site-type: CMS site
 front-image: /img/portfolio/wcu-homepage-front.jpg
 front-image-alt: "university website homepage thumbnail"
 published: true
 ---
 
-<div class="row">
+<div class="row is-parent">
     <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2 text-center">
         <img class="img-fluid" src="../../img/portfolio/wcu-homepage-front.jpg" alt="An iphone, ipad and MacBook laptop showing the wcu.edu website on the screen." />
     </div>
@@ -18,10 +18,31 @@ published: true
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-md-2">
-            <p>In the summer and early autumn of 2019, I redesigned and developed the Western Carolina University (WCU) homepage. WCU is a a mid-sized, regional university located in western North Carolina. I worked on user experience, designed the new homepage from scratch, and completed development for this homepage overhaul. Below I walk through the process of this project. You can jump to the end to read the <a href="#results">project results</a>.</p>
+            <p>In the summer and early autumn of 2019, I redesigned and developed the Western Carolina University (WCU) homepage. WCU is a a mid-sized, regional university located in western North Carolina. I worked on user experience, designed the new homepage from scratch, and completed prototyping and development for this homepage overhaul. Below I walk through the process of this project. You can jump to the end to read the <a href="#results">project results</a>.</p>
         </div>
         <div class="col-md-8 offset-md-2 text-center">
             <a class="btn btn-primary" href="https://www.wcu.edu/" target="_blank">Visit the Site</a>
+        </div>
+    </div>
+</div>
+
+<div class="bg-tertiary mt-5 pt-5 pb-4">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-5">
+                <h2 class="one-half-rem">Problem Statement</h2>
+                <p>As part of an update to the WCU website, WCU needed to change the content on their homepage, using this as an opportunity to improve a noticeably repetitious experience and refresh the design.</p>
+            </div>
+            <div class="col-md-7">
+                <h2 class="h2">Project Goals</h2>
+                <ul class="project-goals fa-ul">
+                    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Reduce content repetition</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Surface key audience and marketing links</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Modernize the design while maintaining brand consistency</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Improve site speed</li>
+                    <li><span class="fa-li"><i class="fa-solid fa-check-square"></i></span>Remove or reduce hidden content</li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
@@ -74,7 +95,7 @@ published: true
         </div>
         <div class="col-md-8 offset-md-2 order-sm-12 mt-5">
             <h3>Development and Launch</h3>
-            <p>In this project I managed and participated in the entire development process. I first developed the page layout locally. I then collaborated with another front-end developer to integrate the code into the CMS in a test environment, which included building new elements into the site’s XSL. After repeated testing and working out the bugs, we replaced the homepage with the new code. Finally, we published the new page!</p>
+            <p>In this project I managed and participated in the entire development process. I first developed the page layout locally. I then collaborated via git with another front-end developer to integrate the code into the CMS in a test environment, which included building new elements into the site’s XSL. After repeated testing and working out the bugs, we replaced the homepage with the new code. Finally, we published the new page!</p>
         </div>
     </div>
 </div>
