updates about page

--- a/about.html
+++ b/about.html
@@ -3,14 +3,14 @@ layout: page
 title: About Me
 description: I enjoy crafting new brands, creating web designs, and writing code to bring them to the web.
 background: '/img/bg-about.jpg'
-last-updated: March 12, 2023
+last-updated: March 27, 2023
 ---
 
 <div class="container">
   <div class="row mb-4">
     <div class="col-md-10 mx-auto">
       <img class="img-thumbnail float-left mr-4 mb-2 mt-4" style="width: 33%;" src="../../img/haley-computer-glasses.jpg" alt="portrait photograph of Haley Hopper wearing glasses and a soft smile" />
-      <p>I am a web designer, front-end developer, and graphic designer. I have more than ten years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
+      <p>I am a web designer, front-end developer, and graphic designer. I have more than 12 years of experience in various areas of design including web, digital, and print design, and have more than eight years of service in the higher education landscape. <a href="https://www.linkedin.com/in/haleyhopper" target="_blank">Here's my LinkedIn profile</a>, if you're interested.</p>
       <p>I enjoy the complex artistry of design and the structure and exactness of front-end code. I crave organization and I'm motivated by helping others achieve their goals.</p>
       <p>These days, I spend the majority of my working time supporting the style, structure, functionality, and technical advancement of an enterprise-wide university website with 200+ CMS editors, as well as designing and building new pages and sites for high-level initiatives. I am open to taking on additional projects, especially if they allow me to explore new topics! <a href="inquire.html">Inquire if you'd like to discuss your project</a>.</p>
       <p>I like good paper, home DIY projects, and strawberry cheesecake. (And I don't think that fruit should be on pizza.)</p>
@@ -57,9 +57,11 @@ last-updated: March 12, 2023
               <li>Web Project Management</li>
               <li>User Experience</li>
               <li>Information Architecture</li>
+              <li>Search Engine Optimization</li>
               <li>Web Migration</li>
               <li>Enterprise-wide Websites</li>
               <li>Centralized Site Management</li>
+              <li>User Testing</li>
               <li>Content Management Systems</li>
               <li>Web Content Assessment</li>
               <li>Higher Education Websites</li>
