Adds previous print projects back to portfolio

--- a/_projects/logos.html
+++ b/_projects/logos.html
@@ -6,7 +6,7 @@ project-date: 2019-05-25
 work-type: Branding
 front-image: /img/portfolio/logo-designs-front.jpg
 front-image-alt: "Ginger Cascades Adventure Base Camp Logo"
-published: false
+published: true
 ---
 
 <div class="row">
