--- a/_projects/ou-framework-document.html
+++ b/_projects/ou-framework-document.html
@@ -6,7 +6,7 @@ project-date: 2019-09-09
 work-type: Print Design
 front-image: /img/portfolio/strategic-framework-front.jpg
 front-image-alt: "a book is open to two pages with text, green boxes, and photos"
-published: false
+published: true
 ---
 
 <div class="row is-parent">
