--- a/_projects/wedding-invitation.html
+++ b/_projects/wedding-invitation.html
@@ -6,7 +6,7 @@ project-date: 2017-07-15
 work-type: Print Design
 front-image: /img/portfolio/wedding-invitation-front.jpg
 front-image-alt: "detail photograph of a wedding invitation decorated with flowers and feathers"
-published: false
+published: true
 ---
 
 <div class="row is-parent">
